workfiles/2con1pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multicontainerpod
  namespace: default
spec:
  volumes:
    - name: shared-data
      emptyDir: {}

  restartPolicy: Never
  containers:
    - name: cont1
      image: nginx
      volumeMounts:
      - name: shared-data
        mountPath: /data/nginx
      resources:
        limits:
          cpus: "1"
          memory: "100Mi"
        requests:
          cpu: "0.5"
          memory: "50Mi"
                

    - name: cont2
      image: nginx
      volumeMounts:
        - name: shared-data
          mountPath: /pod-data
      command: ['sh']
      args: ['-c', "echo Hello World > /pod-data/index.html" ]
      resources:
        limits:
          cpus: "1"
          memory: "100Mi"
        requests:
          cpu: "0.5"
          memory: "50Mi"
