workfiles/candy-service-probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: candy-service
spec:
  containers:
  - name: candy-service
    image: linuxacademycontent/candy-service:2
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8081
        httpHeaders:
          - name: Custom-Header
            value: "This is Awesome"
      initialDelaySeconds: 2
      periodSeconds: 2
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 2
      periodSeconds: 2
