workfiles/deployments-rolling.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deployment-rolling
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: rolling
  template:
    metadata:   
      app: rolling
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.5
          ports:
          - containerPort: 80
