workfiles/livenesspod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: livenesspod
spec:
  containers: 
    - name: liveprober
      image: busybox
      command: ['sh','-c',"echo Hello World && sleep 3600"]
      livenessProbe:
        exec:
           command:
             - echo
             - 'Iam Live'
        initialDelaySeconds: 4
        periodSeconds: 4
