workfiles/myconfigmappod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: myconfigmappod
spec:
  containers:
  - name: myappcontainer
    image: busybox
    command: ['sh' , '-c', "echo $(MY_VAR) is not $(MY_VAR2) && sleep 3600"]
