workfiles/mysecretValidate.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mysecretvalidator
spec:
  containers:
    - name: mysecretvalidatorpod
      image: busybox
      command: ['sh', '-c', "echo My Key is: $(MY_KEY) && sleep 3600"]
