workfiles/readinesspod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: readinesspod
spec:
  containers:
    - name: readiness
      image: nginx
      readinessProbe:
         httpGet:
           path: /
           port: 80
         initialDelaySeconds: 4
         periodSeconds: 4
