workfiles/my-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - nodePort: 30311
    port: 80
    protocol: TCP
    targetPort: 80
