workfiles/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector: 
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
